@@ -3,6 +3,7 @@ Deluge 0.9.07 - "1.0.0_RC7" (In Development)
   * Fix Vista slowness issue
  GtkUI:
   * Add 'edit' to edit trackers dialog
+  * Improve performance of initial torrent list load
   
 Deluge 0.9.06 - "1.0.0_RC6" (13 August 2008)
  Core:
